# chat-with-your-data-solution-accelerator

./: .coveragerc  .dockerignore  .env.example  .env.sample  .flake8  .gitignore  .lint-output.txt  .pre-commit-config.yaml  .ross  CDLA-Permissive-2.md  CHANGELOG.md  CONTRIBUTING.md  LOCAL_DEPLOYMENT.md  Makefile  Migration.md  README.md  SUPPORT.md  TEAMS_EXTENSION.md  app.py  audit-results.txt  avm_readme.md  azure.yaml  azuresearch.py  docker-compose.local.yml  package-lock.json  package.json  pyproject.toml  pytest.functional.ini  pytest.ini  requirements.txt  start.sh  test-comments.md
v2/: .dockerignore  .env.sample  .gitignore  Makefile  README.md  azure.yaml  package-lock.json  package.json  pyproject.toml
v2/Oldinfra/: main.bicep  main.parameters.json  main.waf.parameters.json
v2/Oldinfra/avm/: main.bicep
v2/Oldinfra/bicep/: main.bicep  main.json
v2/Oldinfra/prompt-flow/: deployment.yaml  endpoint.yaml  model.yaml
v2/docker/: .env.dev.example  .gitignore  Dockerfile.backend  Dockerfile.ci-validate  Dockerfile.frontend  Dockerfile.functions  ci-entrypoint.sh  docker-compose.dev.yml  docker-compose.smoke.yml
v2/docs/: admin_runtime_config.md  agents.md  bug-0034-diagnosis.md  bugs.md  chat_history.md  citation-rendering-parity-plan.md  cleanup_audit.md  cloud_deployment.md  deployment_guide.md  development_plan.md  development_plan.old.md  env-vars.md  exception_handling_policy.md  extending.md  frontend-user-identity-plan.md  infrastructure.md  local_development.md  mvp_status.md  pillars_of_development.md  project_status.md  qa_report_v2.archived.md  qa_report_v2.md  qa_review_plan.md  remaining-work-summary.md  status_presentation.md  v1_local_runbook.md  v1_v2_parity_decisions.md
v2/docs/adr/: 0001-registry-over-factory-dispatch.md  0002-no-key-vault-uami-rbac.md  0003-pydantic-settings-over-envhelper.md  0004-foundry-iq-no-openai-sdk-import.md  0005-credential-and-llm-singleton-via-lifespan.md  0006-health-endpoint-split.md  0007-orchestrator-event-typed-sse-channel.md  0008-lazy-foundry-agent-bootstrap.md  0009-single-owner-no-separate-team-framing.md  0010-chronological-debt-queue-drainage.md  0011-frontend-model-extraction.md  0012-frontend-test-folder-mirror.md  0013-frontend-strict-ts-and-tsx-everywhere.md  0014-frontend-ci-workflow.md  0015-frontend-path-alias-cross-folder-imports.md  0016-agent-framework-foundry-iq-tas27-parity-review.md  0017-agent-framework-foundry-pinned-dependency-policy.md  0018-monitoring-default-on-and-appi-rbac.md  0019-no-env-specific-content-in-tracked-files.md  0020-frontend-tests-under-src-tests-frontend.md  0021-agent-framework-foundry-iq-kb-default.md  0022-config-resolution-error-on-incompatible-overrides.md  0023-per-tenant-runtime-config-keying.md  0024-withdraw-per-tenant-runtime-config-single-tenant.md  0025-foundry-prompt-agent-ga-pattern.md  0026-shared-citation-format-contract.md  0027-agent-framework-app-side-rag-on-pgvector.md  0028-event-grid-single-trigger-blob-ingestion.md  0029-frontend-tests-symmetric-under-tests-frontend.md  0030-assistant-type-prompt-presets.md  README.md
v2/docs/plan/: README.md  business-cases.md  modernization-plan.md  mvp-release.md
v2/docs/worklog/: 2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-19.md  2026-06-20.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-29.md  2026-06-30.md  README.md
v2/infra/: abbreviations.json  main.bicep  main.json  main.parameters.json  main.waf.parameters.json
v2/infra/avm/: main.bicep
v2/infra/bicep/: main.bicep  main.json
v2/infra/modules/: ai-project-kb-mcp-connection.bicep  ai-project-search-connection.bicep  ai-project.bicep  virtualNetwork.bicep
v2/scripts/: package-frontend.ps1  package-frontend.sh  package_frontend.py  post-provision.ps1  post-provision.sh  post_provision.py  prepackage-function.ps1  prepackage-function.sh  prepackage_function.py  upload-sample-data.ps1  upload-sample-data.sh  upload_sample_data.py
v2/src/backend/: __init__.py  app.py  dependencies.py  exception_handlers.py
v2/src/frontend/: .gitignore  eslint.config.js  frontend_app.py  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
v2/src/functions/: function_app.py  host.json  pyproject.toml
v2/src/pipelines/: chat.py
v2/src/providers/: __init__.py
v2/src/shared/: __init__.py  registry.py  settings.py  types.py
v2/tests/: conftest.py  test_no_silent_excepts.py
v2/tests/backend/: test_admin.py  test_app_exception_handlers.py  test_app_lifespan.py  test_conversation.py  test_dependencies.py  test_health.py  test_history.py  test_services_admin.py  test_services_conversation.py  test_services_files.py  test_services_health.py  test_services_ingestion.py  test_services_sse.py
v2/tests/frontend/: App.test.tsx  AppAuthBootstrap.test.tsx  AppHistoryToggle.test.tsx  AppNavigation.test.tsx  setup.tsx  test_frontend_app.py  tsconfig.json  vitest.config.ts
v2/tests/frontend_app/: test_frontend_app.py
v2/tests/functions/: test_agent_framework_core_not_meta.py  test_azure_yaml_hooks.py  test_dockerfile_subpackages.py  test_function_app.py  test_prepackage_subpackages.py
v2/tests/infra/: test_ai_project_search_connection.py  test_main_bicep.py
v2/tests/integration/: conftest.py  test_admin_live.py  test_conversation_live.py  test_health_live.py  test_history_isolation_live.py  test_history_live.py
v2/tests/pipelines/: test_chat.py
v2/tests/scripts/: test_package_frontend.py  test_post_provision.py  test_upload_sample_data.py
v2/tests/shared/: test_imports_at_top_only.py  test_init_files_are_marker_only.py  test_no_anonymous_dict_returns.py  test_no_legacy_shared_imports.py  test_no_process_narrative_in_src.py  test_no_type_checking_or_future_annotations.py  test_pillar_phase_header.py  test_registry.py  test_routers_contain_only_routes.py  test_settings.py  test_types.py
v2/tests/smoke/: __init__.py  test_backend_only.py
v2/v2infra/: main.bicep  main.json  main.waf.parameters.json
(+1856 files in other folders)
